fix(FAQ): fix spacing of decorative header elements

--- a/src/scss/faq.scss
+++ b/src/scss/faq.scss
@@ -23,12 +23,16 @@
   }
 
   &::before {
+    left: 65.5px;
+
     @include media(desktop) {
       left: 210.5px;
     }
   }
 
   &::after {
+    right: 65.5px;
+
     @include media(desktop) {
       right: 210.5px;
     }
